fix: correction ServiceS + alignement section aboutme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,7 @@ body {
 #about-me p {
   width: 100%;
   font-size: 14px;
+  padding-left:0px;
 }
 
 .title {
@@ -226,6 +227,7 @@ body {
   display: flex;
   justify-content: center;
   padding : 20px;
+  padding-left:0px;
 }
 .picture.right::before {
   content: ' ';
@@ -301,137 +303,4 @@ input[type="submit"] {
   width: 50%;
   padding: 10px;
   z-index: 1;
-}
-@media all and (max-width: 1180px) {
-  .picture {
-    flex: 2;
-  }
-
-  #about,
-  #contact .container {
-    align-items: center;
-  }
-
-  .about-me__title {
-    margin-top: 0;
-    margin-bottom: 1em;
-  }
-
-  #about-me h6,
-  #about-me p {
-    width: 100%;
-  }
-}
-
-@media all and (max-width: 1000px) {
-  #about {
-    flex-direction: column;
-
-  }
-
-  .picture {
-    width: 50%;
-  }
-
-  .picture.left::before {
-    width: 100%;
-    height: 30%;
-    position: absolute;
-    bottom: auto;
-    top: 0;
-    left: 0;
-    z-index: -1;
-  }
-
-  .about-me__title {
-    text-align: center;
-    margin-top: 1em;
-  }
-
-  #services .container {
-    flex-direction: column;
-  }
-
-  .service {
-    width: 100%;
-    max-width: 100%;
-    height: auto;
-    margin: 2em 0
-  }
-
-  .service__description {
-    margin-bottom: 1em;
-  }
-
-  #services .container::before {
-    width: 30%;
-    height: 100%;
-    bottom: 0;
-    right: 0;
-    left: auto;
-    z-index: 0;
-  }
-
-  #contact .container {
-    flex-direction: column;
-  }
-
-  #contact .picture.right {
-    margin-top: 1em;
-  }
-
-  .picture.right::before {
-    width: 100%;
-    height: 30%;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    z-index: -1;
-  }
-}
-
-@media all and (max-width: 650px) {
-  .top-header {
-    flex-direction: column;
-    padding-inline: 0;
-  }
-
-  .top-header .nav,
-  .top-header .nav ul {
-    width: 100%;
-    padding: 0 0 0 0;
-  }
-
-  .top-header .nav li {
-    flex: 1;
-    padding-block: 1em;
-    text-align: center;
-  }
-
-  .picture.left::before,
-  .picture.right::before {
-    height: 150px;
-  }
-
-  #services .container {
-    align-items: center;
-  }
-
-  .service {
-    max-width: 90%;
-  }
-
-  #about,
-  #contact {
-    padding-inline: 2em;
-    padding-block: 2em;
-  }
-
-  form {
-    width: 100%;
-  }
-
-  .picture {
-    width: 80%;
-  }
 }
